# rusty-dilemma

./: .gitignore  Cargo.toml  Embed.toml  LICENSE.md  README.md  build.rs  flake.nix  justfile  rust-toolchain.toml  turbowaker.sh
.cargo/: config.toml
bootloader/: Cargo.toml  build.rs  memory.2m.x  rust-toolchain.toml
bootloader/src/: bin.rs  binary_info.rs  main.rs
firmware/: Cargo.toml  build.rs  memory.16m.nobl.x  memory.16m.x  memory.2m.nobl.x  memory.2m.x  memory.binaryinfo.x  memory.x
firmware/pico_st7789/: board_config.toml
firmware/src/: allocator.rs  binary_info.rs  event.rs  fwupdate.rs  lib.rs  logger.rs  main.rs  messages.rs  metrics.rs  onewire.rs  rng.rs  side.rs  usb.rs  utils.rs
firmware/src/display/: backend.rs  display_interface.rs  draw_buffer.rs  mod.rs
firmware/src/flash/: mod.rs
firmware/src/fw_update/: mod.rs  updater_task.rs
firmware/src/interboard/: channel.rs  mod.rs  onewire.rs
firmware/src/keys/: chord.rs  layout.rs  mod.rs  scan.rs  unicode.rs
firmware/src/messages/: device_to_device.rs  distributors.rs  mod.rs  transmissions.rs
firmware/src/rgb/: animation.rs  driver.rs  layout.rs  math_utils.rs  mod.rs  runner.rs
firmware/src/rgb/animations/: mod.rs  null.rs  perlin.rs  purple.rs  rain.rs  snow.rs
firmware/src/trackpad/: driver.rs  glide.rs  mod.rs  regs.rs
firmware/src/usb/: channel.rs  device.rs  hid.rs  mod.rs  picotool.rs  serial_cmd_chan.rs
firmware/ui/: main.slint
layouts/: rusty-dilemma.json  rusty-dilemma.kl  rusty-dilemma.yaml
macros/: Cargo.toml
macros/src/: lib.rs
shared/: Cargo.toml
shared/src/: cmd.rs  device_to_device.rs  device_to_host.rs  fw.rs  hid.rs  host_to_device.rs  lib.rs  side.rs
