[workspace]
resolver = "2"
members = ["shared", "firmware"]
exclude = ["bootloader", "macros"]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 2           # <-
overflow-checks = true  # <-
lto = 'thin'

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
