[workspace]
resolver = "2"
members = ["firmware", "shared", "bootloader"]
exclude = ["macros"]

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy" }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 2           # <-
overflow-checks = true  # <-
lto = 'thin'

[profile.release]
codegen-units = 1
debug = 0
strip = true
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3           # <-
overflow-checks = false  # <-
panic = 'abort'
