[workspace]
exclude = ["macros"]
members = ["firmware", "shared", "bootloader"]
resolver = "2"

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy" }
embassy-usb-driver = { git = "https://github.com/embassy-rs/embassy" }

# [patch."https://github.com/embassy-rs/ekv"]
# ekv = { git = "https://github.com/simmsb/ekv" }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
lto = 'thin'
opt-level = 2           # <-
overflow-checks = true  # <-

[profile.release]
codegen-units = 1
debug = 0
# strip = true
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3           # <-
overflow-checks = false  # <-
panic = 'abort'
