[package]
name = "boot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }

embassy-rp = { git = "https://github.com/embassy-rs/embassy", default-features = false, features = ["nightly"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["nightly"] }
embassy-boot-rp = { git = "https://github.com/embassy-rs/embassy", default-features = false }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = { version = "0.7" }
embedded-storage = "0.3.0"
embedded-storage-async = "0.4.0"

[features]
defmt = [
    "dep:defmt",
    "embassy-boot-rp/defmt",
    "embassy-rp/defmt",
]
debug = ["defmt-rtt", "defmt"]
default = ["debug"]

[profile.release]
debug = true
