[package]
name = "rusty-dilemma-boot"
version = "0.1.0"
edition = "2021"
resolver = "2"
repository = "https://github.com/simmsb/rusty-dilemma"
description = "Firmware for the Dilemma v2 keyboard written in Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "boot"
path = "src/bin.rs"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
embassy-rp = { version = "0.1.0", features = [
    "unstable-pac",
    "time-driver",
    "critical-section-impl"
] }
atomic-polyfill = "1.0.3"
rp-binary-info = { git = "https://github.com/rp-rs/rp-binary-info.git", optional = true }

[features]
m2 = []
binaryinfo = ["rp-binary-info"]

default = ["binaryinfo"]

[build-dependencies]
chrono = "0.4.31"
