[package]
name = "rusty-dilemma"
version = "0.1.0"
edition = "2021"
resolver = "2"
repository = "https://github.com/simmsb/rusty-dilemma"
description = "Firmware for the Dilemma v2 keyboard written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "binary"
path = "src/bin/binary.rs"

[dependencies]
shared = { path = "../shared" }
dilemma_macros = { path = "../macros" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
    "nightly",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", features = [
    "unstable-pac",
    "time-driver",
    "unstable-traits",
    "nightly",
    "critical-section-impl",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = [
    "nightly",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = [
    "nightly",
    "unstable-traits",
] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", features = [
    "max-interface-count-6",
] }

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
panic-reset = "0.1.1"
futures = { version = "0.3.28", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic",
    "unstable",
] }
byte-slice-cast = { version = "1.2.2", default-features = false }
embedded-hal-1 = { package = "embedded-hal", version = "1.0.0-alpha.10" }
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2" }
embedded-hal-async = "0.2.0-alpha.2"
embedded-io = { version = "0.4.0", features = ["async"] }
static_cell = "1.2.0"
log_log = { package = "log", version = "0.4.19" }
pio-proc = "0.2.2"
pio = "0.2.1"
heapless = "0.7.16"
usbd-hid = "0.6.1"
postcard = "1.0.4"
serde = { version = "1.0.167", default-features = false, features = ["derive"] }
once_cell = { version = "1.18.0", features = [
    "atomic-polyfill",
], default-features = false }
atomic-polyfill = "1.0.2"
bbqueue = { git = "https://github.com/simmsb/bbqueue", features = ["cortex-m", "thumbv6"] }
panic-probe = { version = "0.3.1", features = ["print-defmt"], optional = true }
defmt = { version = "=0.3.4", optional = true }
defmt-rtt = { version = "0.4.0", optional = true }
bitfield-struct = "0.5.2"
num_enum = { version = "0.6.1", default-features = false }
num = { version = "0.4.0", default-features = false }
usbd-human-interface-device = "0.4.2"
fixed-macro = "1.2.0"
fixed = { version = "1.23.1", features = ["serde"] }
cichlid = { git = "https://github.com/simmsb/cichlid", version = "0.2.1", default-features = false, features = [
    "nightly",
    "no-std",
    "serde",
] }
cordic = "0.1.5"
crc32fast = { version = "1.3.2", default-features = false }
keyberon = { git = "https://github.com/TeXitoi/keyberon", version = "0.2.0" }
phf = { version = "0.11.2", default-features = false }
packed_struct = { version = "0.10.1", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
rp-binary-info = { git = "https://github.com/rp-rs/rp-binary-info.git", optional = true}

[features]
probe = ["defmt", "defmt-rtt", "panic-probe", "shared/defmt", "embassy-embedded-hal/defmt", "embassy-sync/defmt", "embassy-executor/defmt", "embassy-time/defmt", "embassy-time/defmt-timestamp-uptime", "embassy-rp/defmt", "embassy-usb/defmt", "postcard/use-defmt"]
binaryinfo = ["rp-binary-info"]

m2 = []

default = ["binaryinfo"]

[build-dependencies]
chrono = "0.4.19"
