[package]
name = "rusty-dilemma"
version = "0.1.0"
edition = "2021"
resolver = "2"
repository = "https://github.com/simmsb/rusty-dilemma"
description = "Firmware for the Dilemma v2 keyboard written in Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "binary"
path = "src/bin/binary.rs"

[dependencies]
bbqueue = { git = "https://github.com/simmsb/bbqueue", features = ["cortex-m", "thumbv6"] }
bitfield-struct = "0.6.1"
byte-slice-cast = { version = "1.2.2", default-features = false }
cichlid = { git = "https://github.com/simmsb/cichlid", version = "0.2.1", default-features = false, features = [
    "nightly",
    "no-std",
    "serde",
] }
cordic = "0.1.5"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.4"
crc32fast = { version = "1.4.0", default-features = false }
defmt = { version = "0.3.6", optional = true }
defmt-rtt = { version = "0.4.0", optional = true }
dilemma_macros = { path = "../macros" }
display-interface = { version = "0.5.0", optional = true }
ekv = { git = "https://github.com/embassy-rs/ekv", version = "0.1.0", features = [ "crc", "align-4", "page-size-4096" ] }
embassy-embedded-hal = { version = "0.1.0" }
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
    "nightly",
    "turbowakers"
] }
embassy-futures = { version = "0.1.1" }
embassy-os-guess = { git = "https://github.com/simmsb/embassy-os-guess", version = "0.1.0", features = ["log"] }
embassy-rp = { version = "0.1.0", features = [
    "critical-section-impl",
    "unstable-pac",
    "time-driver",
    "rom-func-cache",
    # "intrinsics",
    "rom-v2-intrinsics"
] }
embassy-sync = { version = "0.5.0", features = ["turbowakers"] }
embassy-time = { version = "0.3.0" } #, features = [ "generic-queue" ] }
embassy-usb = { version = "0.2.0", features = [
    "max-interface-count-6",
] }
embedded-alloc = { version = "0.5.1", optional = true }
embedded-graphics = { version = "0.8.1", optional = true }
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2" }
embedded-hal-1 = { package = "embedded-hal", version = "1.0.0" }
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.2.0", features = [ "async" ] }
embedded-io-async = { version = "0.6.1" }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
fixed = { version = "1.27.0", features = ["serde"] }
fixed-macro = "1.2.0"
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic",
    "unstable",
] }
heapless = "0.8.0"
itertools = { version = "0.12.1", default-features = false }
keyberon = { git = "https://github.com/TeXitoi/keyberon", version = "0.2.0" }
libm = { version = "0.2.8", optional = true }
log_log = { package = "log", version = "0.4.21" }
mipidsi = { git = "https://github.com/almindor/mipidsi", optional = true }
num = { version = "0.4.3", default-features = false }
num_enum = { version = "0.7.2", default-features = false }
once_cell = { version = "1.19.0", features = [
    "atomic-polyfill",
], default-features = false }
packed_struct = { version = "0.10.1", default-features = false }
panic-probe = { version = "0.3.1", features = ["print-defmt"], optional = true }
panic-reset = "0.1.1"
phf = { version = "0.11.2", default-features = false }
pio = "0.2.1"
pio-proc = "0.2.2"
portable-atomic = { version = "1.6.0", features = ["critical-section"] }
postcard = { version = "1.0.8", features = ['experimental-derive'] }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
rp-binary-info = { git = "https://github.com/rp-rs/rp-binary-info.git", optional = true }
serde = { version = "1.0.201", default-features = false, features = ["derive"] }
shared = { path = "../shared" }
slint = { git = "https://github.com/slint-ui/slint", default-features = false, optional = true }
static_cell = { version = "2.1.0", features = ["nightly"] }
usbd-hid = "0.7.0"
usbd-human-interface-device = "0.5.0"

[build-dependencies]
chrono = "0.4.38"
slint-build = { git = "https://github.com/slint-ui/slint", optional = true }

[features]
alloc = ["embedded-alloc"]
binaryinfo = ["rp-binary-info"]
bootloader = []

default = ["display-slint", "bootloader"]
display-slint = ["slint", "slint/libm", "slint/compat-1-2", "slint/renderer-software", "slint/unsafe-single-threaded", "slint-build", "display-interface", "alloc", "mipidsi", "embedded-graphics"]
m2 = []
probe = ["defmt", "defmt-rtt", "panic-probe", "shared/defmt", "embassy-embedded-hal/defmt", "embassy-sync/defmt", "embassy-executor/defmt", "embassy-time/defmt", "embassy-time/defmt-timestamp-uptime", "embassy-rp/defmt", "embassy-usb/defmt", "postcard/use-defmt"]
