[package]
name = "dilemma_macros"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
phf_codegen = "0.11.1"
proc-macro-crate = "1.3.1"
proc-macro2 = "1.0.59"
quote = "1.0.28"
syn = "2.0.18"
