[package]
name = "shared"
version = "0.1.0"
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield-struct = "0.6.1"
crc32fast = { version = "1.4.0", default-features = false }
defmt = { version = ">=0.3", optional = true }
fnv = { version = "1.0.7", default-features = false }
heapless = { version = "0.8.0", features = ["serde"] }
log = "0.4.21"
serde = { version = "1.0.201", features = ["derive"], default-features = false }

[features]
defmt = ["dep:defmt", "heapless/defmt-03"]
